@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>org.easymock</groupId>
 			<artifactId>easymock</artifactId>
-			<version>3.1</version>
+			<version>3.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
